--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bip39",
-  "version": "3.0.4",
+  "name": "isomorphic-bip39",
+  "version": "3.0.5",
   "description": "Bitcoin BIP39: Mnemonic code for generating deterministic keys",
   "main": "src/index.js",
   "types": "./types/index.d.ts",
@@ -23,7 +23,9 @@
       "name": "Daniel Cousens",
       "email": "email@dcousens.com",
       "url": "http://dcousens.com"
-    }
+    },
+    "Martynas Kazlauskas <martynas.kazlauskas@iohk.io> (https://iohk.io)",
+    "Rhys Bartels-Waller <rhys.bartelswaller@iohk.io> (https://iohk.io)"
   ],
   "repository": {
     "type": "git",
@@ -36,6 +38,7 @@
   ],
   "dependencies": {
     "@types/node": "11.11.6",
+    "buffer": "^6.0.3",
     "create-hash": "^1.1.0",
     "pbkdf2": "^3.0.9",
     "randombytes": "^2.0.1"
